build/resources/test/Fall_21_Test_Cases/Good/LO-2/lvl2-good-medium-11.lo
// *Good test case*
// While loop
// Expected: 30
// Points = 5

int main() {
    int a, b;
    {
      a = 10;
      b = (10 + 20);

      while((a<b)) {
        a = (a+1);
      }

      return a;
    }
}