build/resources/test/Fall_21_Test_Cases/Bad/LO-2/lvl2-bad-7.lo
// *Bad testcase*
// Incomplete expression
// Points = 3

int foo(int a)
{
  int b;
  {
    b = (a+10);
    return b;
  }
}

int main()
{
  {return foo((5+));}
}
